--- a/css/style.css
+++ b/css/style.css
@@ -115,13 +115,19 @@ input {
     outline: none;
     border: none; }
 
+@media screen and (max-width: 576px) {
+  .container {
+    padding-left: 20px;
+    padding-right: 20px; } }
+
 .main-title {
   font-size: 25px;
   text-transform: uppercase;
   padding: 5px 0 15px;
   border-bottom: 2px solid #dfdfdf;
   position: relative;
-  display: inline-block; }
+  display: inline-block;
+  line-height: 1.4; }
   .main-title::after {
     content: "";
     position: absolute;
@@ -191,7 +197,7 @@ input {
   transition: 300ms ease-in-out; }
   @media screen and (max-width: 992px) {
     .header {
-      padding-top: 30px; } }
+      padding-top: 15px; } }
   .header-active {
     padding: 15px 0;
     background-color: #267fdf; }
@@ -308,6 +314,9 @@ input {
   padding: 0; }
   .footer__links_list li {
     margin-bottom: 25px; }
+    @media screen and (max-width: 576px) {
+      .footer__links_list li {
+        margin-bottom: 18px; } }
     .footer__links_list li a {
       color: #AAAAAA;
       font-size: 16px;
@@ -459,13 +468,25 @@ input {
   @media screen and (max-width: 992px) {
     .first-layout {
       height: 619px; } }
+  @media screen and (max-width: 576px) {
+    .first-layout {
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start; } }
   .first-layout__title {
     margin-bottom: 241px; }
     .first-layout__title h1 {
       color: #fff; }
+      @media screen and (max-width: 576px) {
+        .first-layout__title h1 {
+          line-height: 1.3; } }
     @media screen and (max-width: 992px) {
       .first-layout__title {
         margin-bottom: 150px; } }
+    @media screen and (max-width: 576px) {
+      .first-layout__title {
+        margin-top: 95px;
+        margin-bottom: 0; } }
   .first-layout__img {
     width: 81%;
     position: absolute;
@@ -476,8 +497,8 @@ input {
         width: 100%; } }
     @media screen and (max-width: 576px) {
       .first-layout__img {
-        width: 175%;
-        right: -180px; } }
+        width: 239%;
+        right: -95%; } }
 
 /* About page */
 .about-service {
@@ -485,6 +506,9 @@ input {
   @media screen and (max-width: 992px) {
     .about-service {
       padding: 50px 0; } }
+  @media screen and (max-width: 576px) {
+    .about-service {
+      padding: 20px 0; } }
   .about-service__spacing {
     padding-top: 58px;
     padding-bottom: 58px; }
@@ -509,7 +533,8 @@ input {
     margin: 0; }
     @media screen and (max-width: 576px) {
       .about-service__vertical-title {
-        font-size: 15px; } }
+        font-size: 15px;
+        padding-top: 20px; } }
   .about-service__gallery_item {
     border-radius: 10px;
     overflow: hidden; }
@@ -551,6 +576,9 @@ input {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center; }
+    @media screen and (max-width: 576px) {
+      .about-service__block-bg {
+        padding: 60px 20px; } }
     .about-service__block-bg_text {
       width: 100%;
       max-width: 840px; }
@@ -575,6 +603,9 @@ input {
          object-position: 50% 10%; }
   .about-service__opportunities {
     padding: 70px; }
+    @media screen and (max-width: 576px) {
+      .about-service__opportunities {
+        padding: 50px; } }
     .about-service__opportunities * {
       color: white; }
     .about-service__opportunities p {
@@ -611,6 +642,14 @@ input {
     margin-top: 65px;
     margin-bottom: 65px;
     overflow: auto; }
+    .about-service__workers::-webkit-scrollbar {
+      width: 10px; }
+    .about-service__workers::-webkit-scrollbar-track {
+      background: transparent; }
+    .about-service__workers::-webkit-scrollbar-thumb {
+      background: transparent; }
+    .about-service__workers::-webkit-scrollbar-thumb:hover {
+      background: transparent; }
     .about-service__workers img {
       width: 1036px; }
 
@@ -723,6 +762,9 @@ input {
   .numbers-section__card_content {
     font-size: 16px; }
 
+@media screen and (max-width: 576px) {
+  .other-cases {
+    padding: 60px 0 90px; } }
 .other-cases .swiper-container {
   width: 100%;
   height: 100%; }
