--- a/sass/_classes.scss
+++ b/sass/_classes.scss
@@ -6,6 +6,7 @@
   border-bottom: 2px solid #dfdfdf;
   position: relative;
   display: inline-block;
+  line-height: 1.4;
 
   &::after {
     content: "";
