--- a/sass/pages/_gallery-legal.scss
+++ b/sass/pages/_gallery-legal.scss
@@ -14,15 +14,27 @@
   @include netbook {
     height: 619px;
   }
+
+  @include mobile {
+    align-items: flex-start;
+  }
   &__title {
     margin-bottom: 241px;
 
     h1 {
       color: #fff;
+      @include mobile {
+        line-height: 1.3;
+      }
     }
 
     @include netbook {
       margin-bottom: 150px;
+    }
+
+    @include mobile {
+      margin-top: 95px;
+      margin-bottom: 0;
     }
   }
 
@@ -36,9 +48,9 @@
       width: 100%;
     }
 
-    @include mobile{
-      width: 175%;
-      right: -180px;
+    @include mobile {
+      width: 239%;
+      right: -95%;
     }
   }
 }
@@ -49,6 +61,10 @@
 
   @include netbook {
     padding: 50px 0;
+  }
+
+  @include mobile {
+    padding: 20px 0;
   }
 
   &__spacing {
@@ -76,6 +92,7 @@
 
     @include mobile {
       font-size: 15px;
+      padding-top: 20px;
     }
   }
 
@@ -113,7 +130,7 @@
       font-family: $font-body;
       font-weight: bold;
 
-      @include mobile{
+      @include mobile {
         font-size: 22px;
       }
     }
@@ -127,6 +144,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include mobile {
+      padding: 60px 20px;
+    }
 
     &_text {
       width: 100%;
@@ -160,6 +181,10 @@
 
   &__opportunities {
     padding: 70px;
+
+    @include mobile {
+      padding: 50px;
+    }
 
     * {
       color: white;
@@ -196,7 +221,7 @@
         font-size: 24px;
       }
 
-      @include mobile{
+      @include mobile {
         font-size: 20px;
       }
     }
@@ -221,6 +246,22 @@
 
     overflow: auto;
 
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background: transparent;
+    }
+
     img {
       width: 1036px;
     }
@@ -231,7 +272,7 @@
   padding-top: 50px;
   position: relative;
 
-  @include mobile{
+  @include mobile {
     padding-top: 20px;
   }
   &__title {
@@ -241,7 +282,7 @@
     font-family: $font-body;
     margin-bottom: 30px;
 
-    @include mobile{
+    @include mobile {
       font-size: 25px;
     }
   }
@@ -253,7 +294,7 @@
     font-family: $font-body;
     text-transform: uppercase;
 
-    @include mobile{
+    @include mobile {
       font-size: 14px;
     }
   }
@@ -262,7 +303,7 @@
     font-size: 20px;
     line-height: 1.65;
 
-    @include mobile{
+    @include mobile {
       font-size: 14px;
     }
   }
@@ -342,7 +383,7 @@
       width: 237px;
       height: 409px;
 
-      @include mobile{
+      @include mobile {
         width: 100%;
         height: auto;
         margin-top: 30px;
@@ -350,8 +391,8 @@
     }
   }
 
-  .swiper-pagination{
-    @include mobile{
+  .swiper-pagination {
+    @include mobile {
       display: none;
     }
   }
@@ -363,7 +404,7 @@
     padding: 40px;
     height: 100%;
 
-    @include mobile{
+    @include mobile {
       padding: 30px;
     }
 
@@ -375,7 +416,7 @@
       font-family: $font-title;
       text-transform: uppercase;
 
-      @include mobile{
+      @include mobile {
         font-size: 35px;
       }
     }
@@ -387,6 +428,10 @@
 }
 
 .other-cases {
+
+  @include mobile{
+    padding: 60px 0 90px;
+  }
   .swiper-container {
     width: 100%;
     height: 100%;
@@ -396,10 +441,10 @@
     width: 100%;
     max-width: 490px;
 
-    @include netbook{
+    @include netbook {
       max-width: 400px;
     }
-    @include mobile{
+    @include mobile {
       max-width: 230px;
     }
   }
@@ -409,11 +454,11 @@
     margin-top: 20px;
     margin-bottom: 70px;
 
-    @include netbook{
+    @include netbook {
       font-size: 32px;
     }
 
-    @include mobile{
+    @include mobile {
       font-size: 24px;
       margin-bottom: 40px;
     }
@@ -428,7 +473,7 @@
       max-width: 275px;
       margin: 30px 0 15px;
 
-      @include mobile{
+      @include mobile {
         font-size: 18px;
       }
     }
@@ -437,7 +482,7 @@
       max-width: 350px;
       font-size: 16px;
 
-      @include mobile{
+      @include mobile {
         font-size: 14px;
       }
     }
