--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -14,6 +14,10 @@
       li {
         margin-bottom: 25px;
 
+        @include mobile{
+          margin-bottom: 18px;
+        }
+
         a {
           color: $grey;
           font-size: 16px;
