--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -1,4 +1,4 @@
-.header{
+.header {
   position: absolute;
   top: 0;
   z-index: 10;
@@ -8,16 +8,16 @@
 
   transition: 300ms ease-in-out;
 
-  @include netbook{
-    padding-top: 15px;
+  @include netbook {
+    padding-top: 25px;
   }
 
-  &-active{
+  &-active {
     padding: 15px 0;
     background-color: transparent;
   }
 
-  &__logo{
+  &__logo {
     width: 42px;
     height: 100%;
 
@@ -25,12 +25,12 @@
     align-items: center;
   }
 
-  &__menu{
+  &__menu {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     margin-right: 88px;
-    &_list{
+    &_list {
       list-style: none;
       margin: 0;
       padding: 0;
@@ -39,19 +39,19 @@
       justify-content: center;
       align-items: center;
     }
-    &_item{
+    &_item {
       margin-left: 25px;
       margin-right: 25px;
-      a{
+      a {
         color: white;
         font-weight: 400;
         padding: 5px 0 12px;
         border-bottom: 2px solid #ffffff30;
         position: relative;
         display: inline-block;
-        transition: color .1s ease-in-out;
+        transition: color 0.1s ease-in-out;
 
-        &::after{
+        &::after {
           content: "";
           position: absolute;
           bottom: -2px;
@@ -62,22 +62,21 @@
           background-color: white;
           transition: 250ms ease-in-out;
         }
-        &:hover{
+        &:hover {
           text-decoration: none;
           color: $orange;
-          &:after{
+          &:after {
             width: 100%;
             background-color: $orange;
           }
         }
-
       }
 
-      &_active{
-        a{
+      &_active {
+        a {
           color: $orange;
 
-          &::after{
+          &::after {
             background-color: $orange;
           }
         }
@@ -85,41 +84,112 @@
     }
   }
 
-  &__controls{
+  &__controls {
     display: flex;
     align-items: center;
     justify-content: flex-end;
 
-    .hamburger_menu{
+    .hamburger_menu {
       display: flex;
       justify-content: center;
       flex-direction: column;
-      &_line{
+      position: relative;
+      &_line {
         width: 35px;
         height: 2px;
         background-color: #fff;
+        transition: 250ms ease;
 
-        &_top{
+        &_top {
           width: 24px;
           margin-bottom: 9px;
+        }
+      }
+
+      &_active {
+        .hamburger_menu_line {
+          transform: rotate(45deg) translateX(-8px) translateX(6px) translateY(-8px);
+          width: 24px;
+        }
+        .hamburger_menu_line_top {
+          transform: rotate(-45deg) translateX(-6px) translateX(6px) translateY(6px);
+          width: 24px;
         }
       }
     }
   }
 
-  &__burger{
+  &__burger {
     display: flex;
     align-items: center;
     margin-left: 20px;
+    width: 35px;
   }
 
-  &__social{
+  &__social {
     display: flex;
 
-    &_item{
+    &_item {
       width: 48px;
       display: block;
       margin: 0 24px 0 0;
     }
   }
+
+  &__navmenu {
+    position: absolute;
+    top: -100%;
+    z-index: 3;
+    width: 100%;
+    height: 100vh;
+    transition: 300ms ease-in-out;
+    background-color: black;
+
+    &_block {
+      margin-top: 180px;
+
+      @include mobile {
+        margin-top: 100px;
+      }
+    }
+
+    &_title {
+      font-family: $font-title;
+      font-size: 34px;
+      font-weight: bold;
+      display: block;
+      color: white;
+      margin-bottom: 30px;
+
+      &:hover {
+        color: white;
+        text-decoration: none;
+      }
+    }
+    &_list {
+      list-style: none;
+      margin: 0;
+      margin-bottom: 45px;
+      padding: 0;
+
+      li {
+        margin-bottom: 20px;
+
+        a {
+          color: white;
+          font-family: $font-body;
+          transition: 250ms ease-in-out;
+
+          &:hover {
+            color: $orange;
+            text-decoration: none;
+          }
+        }
+      }
+    }
+  }
+}
+
+.menu-opened {
+  top: 0;
 }
